setting up kafka consumer/producer for ticket creations

--- a/ticketmaster_ticket_creator/src/main/resources/application.properties
+++ b/ticketmaster_ticket_creator/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=ticketmaster_events
+spring.application.name=ticketmaster_ticket_creator
+server.port=4000
 
 # health checks
 management.endpoint.health.probes.enabled=true
@@ -8,7 +9,7 @@ management.health.readinessState.enabled=true
 
 # dev
 spring.devtools.livereload.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -25,6 +26,5 @@ spring.redis.timeout=60000
 
 # kafka
 spring.kafka.consumer.bootstrap-servers=${KAFKA_HOST:localhost}:9092
-topic.name.producer=ticket_creations
-
-
+spring.kafka.consumer.group-id="ticket_creator"
+topic.name.consumer=ticket_creations
